Note on where the rest of the exercise questions are

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -58,6 +58,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE:** The remaining exercises are within the notebook nearby relevant topic."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5262,7 +5270,7 @@
    "metadata": {},
    "source": [
     "# Exercise solutions\n",
-    "# These solutions are for the exercises at the and of the chapter. They are NOT included in SISAI computer exercise."
+    "# These solutions are NOT for the SISAI computer exercise questions. They are for the exercises at the end of the chapter."
    ]
   },
   {
