--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise question 5: Confusion matric for multiclass classification on MNIST** (1 points)\n",
+    "**Exercise question 5: Confusion matrix for multiclass classification on MNIST** (1 points)\n",
     "\n",
     "Consider the confusion matrix shown on page 103 for the multiclass classifier trained on the MNIST data set. Explain what each of the following numbers stand for:\n",
     "1. 5578 on the first row and first column\n",
@@ -200,6 +200,14 @@
     "- Make sure you compute the accuracy on the test set\n",
     "- You should perform stratification when creating the traning datasets of different sizes. \n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise question 8: Random Forest classifier** (2 points)"
    ]
   },
   {
@@ -4946,7 +4954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "nav_menu": {},
   "toc": {
