Exercise question 7 fixed

--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -207,7 +207,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise question 8: Random Forest classifier** (2 points)"
+    "**Exercise question 7: Random Forest classifier** (2 points)\n",
+    "\n",
+    "1. Train a model using Random Forest classifier on the MNIST dataset.\n",
+    "2. Compute and plot the confusion matrix.\n",
+    "3. Study the matrix and the plot in comparison to the confusion matrix for the SGD classifier given in the textbook. Are they similar? What are the discrepancies? "
    ]
   },
   {
