Statistics vs ML added

--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -82,6 +82,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SISAI: Extra material on Regression in ML vs Statistics\n",
+    "If you have used regression previously as a statistical method, you may be wondering how it is different from regression as a machine learning method.\n",
+    "\n",
+    "We may consider this relationship as machine learning is built upon statistics. \n",
+    "\n",
+    "Differences in linear regression in statistics and machine learning.\n",
+    "\n",
+    "*   Purpose: Prediction vs. Inference\n",
+    "\n",
+    "In machine learning, the goals is to achive high predictive power. In statistics, the objective is investigate the relationships between the data and the outcome variable and prove the relationship up to a degree of statistical significance. \n",
+    "\n",
+    "*   Assessment: Test set vs. statistical tests\n",
+    "\n",
+    "In machine learning, model performence is assessed based on the error on the test set. \n",
+    "\n",
+    "For a statistical model, regression parameters are analysed via confidence intervals, significance tests, and other tests can be used to assess the model’s legitimacy\n",
+    "\n",
+    "*   Assumptions of linear regression methods\n",
+    "\n",
+    "Assumptions for the linear regression model:\n",
+    "1. Linear Relationship between the features and target\n",
+    "2. Little or no Multicollinearity between the features\n",
+    "3. Homoscedasticity assumption\n",
+    "4. Normal distribution of error terms\n",
+    "5. No correlation betweeen the error terms.\n",
+    "\n",
+    "Assumptions 3-6 are needed for the validity of the inferences. Therefore, they are not very significant in machine learning although their violation may indicate that the model does not perform well.\n",
+    "\n",
+    "*   Method for finding parameters\n",
+    "\n",
+    "MSE (OLS) computes the parameters for a linear model which minimize the sum of the squared residuals. This is the method used in the exercise.\n",
+    "\n",
+    "There is another method, Maximum likelihood method which finds those paramteres that maximize the likelihood of the observed data comes from the model.\n",
+    "\n",
+    "When all of the above assumptions are valid, they produce the same paramter values."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# SISAI Exercise Questions\n",
     "\n",
     "**Exercise question 1:** (1 points)\n",
